--- a/.github/labels.yml.erb
+++ b/.github/labels.yml.erb
@@ -12,15 +12,11 @@
 # event type
 #
 
-- name: "event type: log"
-  description: Anything log event related
+<%- metadata.data_model.types.each do |type| -%>
+- name: "event type: <%= type %>"
+  description: Anything <%= type %> event related
   color: 1cd1a1
-- name: "event type: metric"
-  description: Anything metric event related
-  color: 1cd1a1
-- name: "event type: trace"
-  description: Anything trace event related
-  color: 1cd1a1
+<%- end -%>
 
 #
 # meta
